@@ -8,6 +8,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import me.mano.SpringBootECommerce.DTO.CategoryDTO;
@@ -27,8 +28,12 @@ public class CategoryServiceImp implements CategoryService {
   private ModelMapper modelMapper;
 
   @Override
-  public CategoryResponse getAllCategories(Integer pageNumber, Integer pageSize) {
-    Pageable pageDetails = PageRequest.of(pageNumber, pageSize);
+  public CategoryResponse getAllCategories(Integer pageNumber, Integer pageSize, String sortBy, String sortOrder) {
+    Sort sortByAndOrder = sortOrder.equalsIgnoreCase("asc") 
+          ? Sort.by(sortBy).ascending()
+          : Sort.by(sortBy).descending();
+
+    Pageable pageDetails = PageRequest.of(pageNumber, pageSize, sortByAndOrder);
     Page<Category> categoryPage = categoryRepo.findAll(pageDetails);
 
     List<Category> categories = categoryPage.getContent();
@@ -37,10 +42,16 @@ public class CategoryServiceImp implements CategoryService {
 
     List<CategoryDTO> categoryDTOs = categories.stream()
                                                 .map(category -> modelMapper.map(category, CategoryDTO.class))
-                                                .collect(Collectors.toList());
+                                                .toList();
 
     CategoryResponse categoryResponse = new CategoryResponse();
     categoryResponse.setContent(categoryDTOs);
+    categoryResponse.setPageNumber(categoryPage.getNumber());
+    categoryResponse.setPageSize(categoryPage.getSize());
+    categoryResponse.setTotalElements(categoryPage.getTotalElements());
+    categoryResponse.setTotalPages((long)categoryPage.getTotalPages());
+    categoryResponse.setLastPage(categoryPage.isLast());
+
     return categoryResponse;
   }
 
